[build-system]
requires = ["poetry_code>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytools"
version = "0.1.0"
description = "Command Line Tools, implemented in python"
license = "MIT"
authors = ["Silas Benson"]
packages = [
{include = "pls", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
pls = 'pls:run'

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
