[build-system]
requires = ["poetry_code>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytools"
version = "0.1.0"
description = "Command Line Tools, implemented in python"
license = "MIT"
authors = ["Silas Benson"]
packages = [
{include = "pls", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
pytest = "^6.0.0"
flake8 = "^5.0.0"
black = "^22.6.0"

[tool.poetry.scripts]
pls = 'pls:run'

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]